--- a/index.html
+++ b/index.html
@@ -99,45 +99,40 @@
 					</div>
 					<div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
 						<div class="content d-flex flex-column justify-content-center">
-							<h3>Provide pleasure as deserving</h3>
+							<h3>Digging Deep into Myself</h3>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+								I’m an innovative software engineer with 3+ years of experience managing all aspects of the development process for small to medium-sized companies.
 							</p>
 							<div class="row">
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
 									<div class="count-box">
 										<i class="icofont-simple-smile"></i>
-										<span data-toggle="counter-up">65</span>
-										<p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam
-											architecto ut.</p>
+										<span data-toggle="counter-up">10</span>
+										<p><strong>Happy Clients</strong> from all over the world.</p>
 									</div>
 								</div>
 
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
 									<div class="count-box">
 										<i class="icofont-document-folder"></i>
-										<span data-toggle="counter-up">85</span>
-										<p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium
-											et quia dere tan</p>
+										<span data-toggle="counter-up">15</span>
+										<p><strong>Projects</strong> have done so far.</p>
 									</div>
 								</div>
 
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
 									<div class="count-box">
 										<i class="icofont-clock-time"></i>
-										<span data-toggle="counter-up">12</span>
-										<p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam
-											ducimus aut voluptate non vel</p>
+										<span data-toggle="counter-up">3.5</span>
+										<p><strong>Years of experience</strong> in backend and frontend technologies.</p>
 									</div>
 								</div>
 
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
 									<div class="count-box">
 										<i class="icofont-award"></i>
-										<span data-toggle="counter-up">15</span>
-										<p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et
-											nemo pad der</p>
+										<span data-toggle="counter-up">5</span>
+										<p><strong>Awards</strong> have got from organisations I worked with.</p>
 									</div>
 								</div>
 							</div>
@@ -172,7 +167,7 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">CSS <i class="val">90%</i></span>
+							<span class="skill">CSS <i class="val">80%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 									aria-valuemax="100"></div>
@@ -180,19 +175,25 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">JavaScript <i class="val">75%</i></span>
+							<span class="skill">JavaScript <i class="val">85%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
-
+						<div class="progress">
+							<span class="skill">AWS Elastic Search <i class="val">80%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
 					</div>
 
 					<div class="col-lg-6">
 
 						<div class="progress">
-							<span class="skill">PHP <i class="val">80%</i></span>
+							<span class="skill">PHP <i class="val">95%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 									aria-valuemax="100"></div>
@@ -200,7 +201,7 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">WordPress/CMS <i class="val">90%</i></span>
+							<span class="skill">Laravel <i class="val">95%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 									aria-valuemax="100"></div>
@@ -208,12 +209,20 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">Photoshop <i class="val">55%</i></span>
+							<span class="skill">Vue <i class="val">75%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
+						<div class="progress">
+							<span class="skill">Node.js <i class="val">70%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+						
 
 					</div>
 
