--- a/index.html
+++ b/index.html
@@ -246,67 +246,64 @@
 					<div class="col-lg-6">
 						<h3 class="resume-title">Sumary</h3>
 						<div class="resume-item pb-0">
-							<h4>Alice Barkley</h4>
-							<p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing
-									and developing user-centered digital/print marketing material from initial concept
-									to final, polished deliverable.</em></p>
+							<h4>Najmussaher Siddiqui</h4>
+							<p><em>Innovative and deadline-driven Software Engineer with 3+ years of experience developing user-centered software applications from initial concept to final, polished deliverable.</em></p>
 							<p>
 							<ul>
-								<li>Portland par 127,Orlando, FL</li>
-								<li>(123) 456-7891</li>
-								<li>alice.barkley@example.com</li>
+								<li>401/64, Abdul Aziz Road, Bhola Nath Kuwan, Lucknow 226003</li>
+								<li>9170997636</li>
+								<li>saher.siddiqui15@gmail.com</li>
 							</ul>
 							</p>
 						</div>
 
 						<h3 class="resume-title">Education</h3>
 						<div class="resume-item">
-							<h4>Master of Fine Arts &amp; Graphic Design</h4>
-							<h5>2015 - 2016</h5>
-							<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-							<p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero
-								voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+							<h4>B.Tech In Computer Science  &amp; Engineering </h4>
+							<h5>2013 - 2017</h5>
+							<p><em>Lucknow Institute of Technology, Lucknow, India</em></p>
+							<p>Completed graduation in year 2017 with 76% of marks from Abdul Kalam Technical University.</p>
 						</div>
 						<div class="resume-item">
-							<h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-							<h5>2010 - 2014</h5>
-							<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-							<p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel
-								ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae
-								consequatur neque etlon sader mart dila</p>
+							<h4>Intermdiate</h4>
+							<h5>2011 - 2013</h5>
+							<p><em>Happy Hours Inter College, Lucknow ,India</em></p>
+							<p>Completed intermdiate in 2013 by 73% marks from Uttar Pradesh Board of Eductaion.</p>
+						</div>
+						<div class="resume-item">
+							<h4>High School</h4>
+							<h5>2009 - 2011</h5>
+							<p><em>Happy Hours Inter College, Lucknow ,India</em></p>
+							<p>Completed intermdiate in 2011 by 76% marks from Uttar Pradesh Board of Eductaion.</p>
 						</div>
 					</div>
 					<div class="col-lg-6">
 						<h3 class="resume-title">Professional Experience</h3>
 						<div class="resume-item">
-							<h4>Senior graphic design specialist</h4>
+							<h4>Software Engineer</h4>
 							<h5>2019 - Present</h5>
-							<p><em>Experion, New York, NY </em></p>
+							<p><em>Appinventiv , Noida , India </em></p>
 							<p>
 							<ul>
-								<li>Lead in the design, development, and implementation of the graphic, layout, and
+								<li>Lead in the development, and implementation of the business logic, layout, and
 									production communication materials</li>
-								<li>Delegate tasks to the 7 members of the design team and provide counsel on all
+								<li>Delegate tasks to the 5 members of the team and provide counsel on all
 									aspects of the project. </li>
-								<li>Supervise the assessment of all graphic materials in order to ensure quality and
-									accuracy of the design</li>
-								<li>Oversee the efficient use of production project budgets ranging from $2,000 -
-									$25,000</li>
+								<li>Supervise the assessment of all task in order to ensure quality and
+									accuracy of the project</li>
 							</ul>
 							</p>
 						</div>
 						<div class="resume-item">
-							<h4>Graphic design specialist</h4>
-							<h5>2017 - 2018</h5>
-							<p><em>Stepping Stone Advertising, New York, NY</em></p>
+							<h4>Software Engineer</h4>
+							<h5>2017 - 2019</h5>
+							<p><em>Singsys PTE LTD, Lucknow , India</em></p>
 							<p>
 							<ul>
-								<li>Developed numerous marketing programs (logos, brochures,infographics, presentations,
-									and advertisements).</li>
+								<li>Developed numerous software applications (website, API's and web pages).</li>
 								<li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-								<li>Recommended and consulted with clients on the most appropriate graphic design</li>
-								<li>Created 4+ design presentations and proposals a month for clients and account
-									managers</li>
+								<li>Recommended and consulted with clients on the most appropriate business logic</li>
+								<li>Created 4+  presentations and proposals a month for clients and account managers</li>
 							</ul>
 							</p>
 						</div>
