changes for portfolio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link href="assets/img/favicon.png" rel="icon">
+	<link href="assets/img/favicon.ico" rel="icon">
 	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
@@ -29,8 +29,8 @@
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<!-- =======================================================
-    * Template Name: Lonely - v2.3.0
-    * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-lonely/
+    * Template Name: Saher - v2.3.0
+    * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-Saher/
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
@@ -188,6 +188,13 @@
 									aria-valuemax="100"></div>
 							</div>
 						</div>
+						<div class="progress">
+							<span class="skill">Express Js <i class="val">60%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
 					</div>
 
 					<div class="col-lg-6">
@@ -217,6 +224,13 @@
 						</div>
 						<div class="progress">
 							<span class="skill">Node.js <i class="val">70%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+						<div class="progress">
+							<span class="skill">Codeigniter <i class="val">60%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
 									aria-valuemax="100"></div>
@@ -325,41 +339,41 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bxl-dribbble"></i></div>
-							<h4 class="title"><a href="">Lorem Ipsum</a></h4>
+							<h4 class="title"><a href="">Web Development</a></h4>
 							<p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
 								excepturi</p>
 						</div>
 					</div>
 
-					<div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-file"></i></div>
-							<h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+							<h4 class="title"><a href="">Api Development</a></h4>
 							<p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
 								dolore</p>
 						</div>
 					</div>
 
-					<div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-tachometer"></i></div>
-							<h4 class="title"><a href="">Magni Dolores</a></h4>
+							<h4 class="title"><a href="">AWS Services</a></h4>
 							<p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
 								officia</p>
 						</div>
 					</div>
 
-					<div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+					<!-- <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-world"></i></div>
 							<h4 class="title"><a href="">Nemo Enim</a></h4>
 							<p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui
 								blanditiis</p>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
@@ -381,9 +395,9 @@
 					<div class="col-lg-12 d-flex justify-content-center">
 						<ul id="portfolio-flters">
 							<li data-filter="*" class="filter-active">All</li>
-							<li data-filter=".filter-app">App</li>
-							<li data-filter=".filter-card">Card</li>
-							<li data-filter=".filter-web">Web</li>
+							<li data-filter=".filter-app">Web</li>
+							<li data-filter=".filter-card">App</li>
+							<li data-filter=".filter-web">Personal</li>
 						</ul>
 					</div>
 				</div>
@@ -392,88 +406,88 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>App 1</h4>
-								<p>App</p>
+								<h4>Gurushala</h4>
+								<p>Web</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery"
 									class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://gurushala.co/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-22.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 3</h4>
+								<h4>SmileSmith</h4>
 								<p>Web</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-22.png" data-gall="portfolioGallery"
 									class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://smilesmith.dental/"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-33.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>App 2</h4>
-								<p>App</p>
+								<h4>Eg Hardware</h4>
+								<p>Web</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-33.png" data-gall="portfolioGallery"
 									class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="eghardware.sg" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-44.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Card 2</h4>
-								<p>Card</p>
+								<h4>The Walking GM</h4>
+								<p>Web</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-44.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="thewalkinggm.com" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-55.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Obuhi</h4>
+								<p>Web</p>
+							</div>
+							<div class="portfolio-links">
+								<a href="assets/img/portfolio/portfolio-55.png" data-gall="portfolioGallery"
+									class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+									<a href="https://obuhi.com" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								</div>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-77.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 2</h4>
-								<p>Web</p>
+								<h4>Preview Image Vue</h4>
+								<p>Personal</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery"
-									class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>App 3</h4>
-								<p>App</p>
-							</div>
-							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-77.png" data-gall="portfolioGallery"
 									class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
 								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
@@ -482,56 +496,68 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-66.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Card 1</h4>
-								<p>Card</p>
+								<h4>GETR</h4>
+								<p>App</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
+								<a href="assets/img/portfolio/portfolio-66.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.getr&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-88.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Card 3</h4>
-								<p>Card</p>
+								<h4>GITR</h4>
+								<p>App</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-									class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="assets/img/portfolio/portfolio-88.png" data-gall="portfolioGallery"
+									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.gitr&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/portfolio-99.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>Web 3</h4>
-								<p>Web</p>
+								<h4>The Walking GM</h4>
+								<p>App</p>
 							</div>
 							<div class="portfolio-links">
-								<a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
-									class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="assets/img/portfolio/portfolio-99.png" data-gall="portfolioGallery"
+									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=singsys.com.thewalkinggm&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
-
+					<div class="col-lg-4 col-md-6 portfolio-item filter-card">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/portfolio-00.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>LookiBooky</h4>
+								<p>App</p>
+							</div>
+							<div class="portfolio-links">
+								<a href="assets/img/portfolio/portfolio-00.png" data-gall="portfolioGallery"
+									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.lookibooky&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+							</div>
+						</div>
+					</div>
 				</div>
 
 			</div>
 		</section><!-- End Portfolio Section -->
 
 		<!-- ======= Testimonials Section ======= -->
-		<section id="testimonials" class="testimonials section-bg">
+		<!-- <section id="testimonials" class="testimonials section-bg">
 			<div class="container">
 
 				<div class="section-title">
@@ -609,7 +635,8 @@
 				</div>
 
 			</div>
-		</section><!-- End Testimonials Section -->
+		</section> -->
+		<!-- End Testimonials Section -->
 
 		<!-- ======= Contact Section ======= -->
 		<section id="contact" class="contact section-bg">
@@ -626,15 +653,15 @@
 
 					<div class="col-lg-4 col-md-4">
 						<div class="contact-about">
-							<h3>Lonely</h3>
+							<h3>Saher</h3>
 							<p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus.
 								Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc
 								congue.</p>
 							<div class="social-links">
-								<a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-								<a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-								<a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-								<a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+								<a href="https://twitter.com/sahersiddiqui4" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
+								<a href="https://m.facebook.com/saher.siddiqui.963" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
+								<a href="https://www.instagram.com/saher_siddiquii/"  target="_blank"  class="instagram"><i class="icofont-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/saher-siddiqui-b8494b144/" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
 							</div>
 						</div>
 					</div>
@@ -643,17 +670,17 @@
 						<div class="info">
 							<div>
 								<i class="icofont-google-map"></i>
-								<p>A108 Adam Street<br>New York, NY 535022</p>
+								<p>401/64, Abdul Aziz Road, Bhola Nath kuwan<br>Lucknow, India 226003</p>
 							</div>
 
 							<div>
 								<i class="icofont-envelope"></i>
-								<p>info@example.com</p>
+								<p>saher.siddiqui15@gmail.com</p>
 							</div>
 
 							<div>
 								<i class="icofont-phone"></i>
-								<p>+1 5589 55488 55s</p>
+								<p>9170997636</p>
 							</div>
 
 						</div>
@@ -702,14 +729,7 @@
 	<footer id="footer">
 		<div class="container">
 			<div class="copyright">
-				&copy; Copyright <strong><span>Lonely</span></strong>. All Rights Reserved
-			</div>
-			<div class="credits">
-				<!-- All the links in the footer should remain intact. -->
-				<!-- You can delete the links only if you purchased the pro version. -->
-				<!-- Licensing information: https://bootstrapmade.com/license/ -->
-				<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-lonely/ -->
-				Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+				&copy; Copyright <strong><span>Saher</span></strong>. All Rights Reserved
 			</div>
 		</div>
 	</footer><!-- End  Footer -->
