changes for portfolio

--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
 
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>Software Engineer with proven technical, organizational, and communication skills. Interested in a Sotware Development, to utilize 3+ years of experience in website development, management and configuration.</p>
 				</div>
 
 				<div class="row skills-content">
@@ -251,9 +249,7 @@
 
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>BE Graduate|3 years of experience in Software Development|Sound understanding of HTML, CSS3, JSON, Database, and SQL queries|Capable of Performance Testing, Documentation, and Deployment on live site</p>
 				</div>
 
 				<div class="row">
@@ -333,36 +329,31 @@
 
 				<div class="section-title">
 					<h2>Services</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>I am a web developer with all the expertise you need to build a successful, scalable and stable product.</p>
 				</div>
 
 				<div class="row">
 					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bxl-dribbble"></i></div>
-							<h4 class="title"><a href="">Web Development</a></h4>
-							<p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
-								excepturi</p>
+							<h4 class="title"><a href="javascript:;">Web Development</a></h4>
+							<p class="description">Helping Businesses build secure and scalable Web Applications, Portals and Solutions </p>
 						</div>
 					</div>
 
 					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-file"></i></div>
-							<h4 class="title"><a href="">Api Development</a></h4>
-							<p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-								dolore</p>
+							<h4 class="title"><a href="javascript:;">Api Development</a></h4>
+							<p class="description">Helping Startups and Businesses around the globe develop next-gen iOS apps with cutting-edge technology.</p>
 						</div>
 					</div>
 
 					<div class="col-md-8 col-lg-4 d-flex align-items-stretch mb-6 mb-lg-0">
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-tachometer"></i></div>
-							<h4 class="title"><a href="">AWS Services</a></h4>
-							<p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-								officia</p>
+							<h4 class="title"><a href="javascript:;">AWS Services</a></h4>
+							<p class="description">Helping Businesses to build smart solutions for smarter brands.</p>
 						</div>
 					</div>
 
@@ -386,9 +377,7 @@
 
 				<div class="section-title">
 					<h2>Portfolio</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>BE Graduate|3 years of experience in Software Development|Sound understanding of HTML, CSS3, JSON, Database, and SQL queries|Capable of Performance Testing, Documentation, and Deployment on live site</p>
 				</div>
 
 				<div class="row">
@@ -644,9 +633,7 @@
 
 				<div class="section-title">
 					<h2>Contact</h2>
-					<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
-						sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
-						ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+					<p>While we are good at sign language, there are various other simpler ways to connect with me. Talk to me in person.</p>
 				</div>
 
 				<div class="row">
@@ -654,9 +641,7 @@
 					<div class="col-lg-4 col-md-4">
 						<div class="contact-about">
 							<h3>Saher</h3>
-							<p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus.
-								Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc
-								congue.</p>
+							<p>I’m an innovative software engineer with 3+ years of experience managing all aspects of the development process for small to medium-sized companies.</p>
 							<div class="social-links">
 								<a href="https://twitter.com/sahersiddiqui4" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
 								<a href="https://m.facebook.com/saher.siddiqui.963" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
