--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
 				<div class="row">
 
-					<div class="col-lg-4 col-md-4">
+					<div class="col-lg-6 col-md-6">
 						<div class="contact-about">
 							<h3>Saher</h3>
 							<p>I’m an innovative software engineer with 3+ years of experience managing all aspects of the development process for small to medium-sized companies.</p>
@@ -651,7 +651,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-3 col-md-4">
+					<div class="col-lg-6 col-md-6">
 						<div class="info">
 							<div>
 								<i class="icofont-google-map"></i>
@@ -671,7 +671,7 @@
 						</div>
 					</div>
 
-					<div class="col-lg-5 col-md-8">
+					<!-- <div class="col-lg-5 col-md-8">
 						<form action="forms/contact.php" method="post" role="form" class="php-email-form">
 							<div class="form-group">
 								<input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
@@ -701,7 +701,7 @@
 							</div>
 							<div class="text-center"><button type="submit">Send Message</button></div>
 						</form>
-					</div>
+					</div> -->
 
 				</div>
 
