changes for portfolio

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-33.png" data-gall="portfolioGallery"
 									class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-								<a href="eghardware.sg" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://www.eghardware.sg/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -448,7 +448,7 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-44.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-								<a href="thewalkinggm.com" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://www.thewalkinggm.com/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -478,7 +478,7 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-77.png" data-gall="portfolioGallery"
 									class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-								<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://www.npmjs.com/package/preview-image-vue" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
