--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<!-- ======= Hero Section ======= -->
 	<section id="hero" class="d-flex flex-column align-items-center justify-content-center">
 		<h1>Hi, I'm Najmussaher Siddiqui!</h1>
-		<h2>I am a software engineer</h2>
+		<h2>I am a Software Engineer</h2>
 		<a href="#about" class="btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
 	</section><!-- End Hero -->
 
@@ -101,7 +101,8 @@
 						<div class="content d-flex flex-column justify-content-center">
 							<h3>Digging Deep into Myself</h3>
 							<p>
-								I’m an innovative software engineer with 3+ years of experience managing all aspects of the development process for small to medium-sized companies.
+								I’m an innovative software engineer with 4+ years of experience managing all aspects of
+								the development process for small to medium-sized companies.
 							</p>
 							<div class="row">
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -123,8 +124,9 @@
 								<div class="col-md-6 d-md-flex align-items-md-stretch">
 									<div class="count-box">
 										<i class="icofont-clock-time"></i>
-										<span data-toggle="counter-up">3.5</span>
-										<p><strong>Years of experience</strong> in backend and frontend technologies.</p>
+										<span data-toggle="counter-up">4.5</span>
+										<p><strong>Years of experience</strong> in backend and frontend technologies.
+										</p>
 									</div>
 								</div>
 
@@ -149,23 +151,23 @@
 
 				<div class="section-title">
 					<h2>Skills</h2>
-					<p>Software Engineer with proven technical, organizational, and communication skills. Interested in a Sotware Development, to utilize 3+ years of experience in website development, management and configuration.</p>
+					<p>Software Engineer with proven technical, organizational, and communication skills. Interested in
+						a Sotware Development, to utilize 4+ years of experience in website development, management and
+						configuration.</p>
 				</div>
 
 				<div class="row skills-content">
 
 					<div class="col-lg-6">
-
 						<div class="progress">
-							<span class="skill">HTML <i class="val">100%</i></span>
+							<span class="skill">React.Js <i class="val">60%</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
-
 						<div class="progress">
-							<span class="skill">CSS <i class="val">80%</i></span>
+							<span class="skill">HTML <i class="val">90%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 									aria-valuemax="100"></div>
@@ -173,34 +175,56 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">JavaScript <i class="val">85%</i></span>
+							<span class="skill">CSS <i class="val">70%</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+
+						<div class="progress">
+							<span class="skill">JavaScript <i class="val">70%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
 						<div class="progress">
 							<span class="skill">AWS Elastic Search <i class="val">80%</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
-						<div class="progress">
-							<span class="skill">Express Js <i class="val">60%</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
+
 					</div>
 
 					<div class="col-lg-6">
-
+						<div class="progress">
+							<span class="skill">Typescript <i class="val">60%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+						<div class="progress">
+							<span class="skill">Vue <i class="val">75%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
+						<div class="progress">
+							<span class="skill">Node.js <i class="val">70%</i></span>
+							<div class="progress-bar-wrap">
+								<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+									aria-valuemax="100"></div>
+							</div>
+						</div>
 						<div class="progress">
 							<span class="skill">PHP <i class="val">95%</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
@@ -208,33 +232,11 @@
 						<div class="progress">
 							<span class="skill">Laravel <i class="val">95%</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
 
-						<div class="progress">
-							<span class="skill">Vue <i class="val">75%</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
-						<div class="progress">
-							<span class="skill">Node.js <i class="val">70%</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
-						<div class="progress">
-							<span class="skill">Codeigniter <i class="val">60%</i></span>
-							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-									aria-valuemax="100"></div>
-							</div>
-						</div>
-						
 
 					</div>
 
@@ -249,15 +251,19 @@
 
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>BE Graduate|3 years of experience in Software Development|Sound understanding of HTML, CSS3, JSON, Database, and SQL queries|Capable of Performance Testing, Documentation, and Deployment on live site</p>
+					<p>B.Tech Graduate | 4+ years of experience in Software Development| Sound understanding of HTML,
+						CSS3, JSON, Database, and SQL queries | Capable of Performance Testing, Documentation, and
+						Deployment on live site</p>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-6">
-						<h3 class="resume-title">Sumary</h3>
+						<h3 class="resume-title">Summary</h3>
 						<div class="resume-item pb-0">
 							<h4>Najmussaher Siddiqui</h4>
-							<p><em>Innovative and deadline-driven Software Engineer with 3+ years of experience developing user-centered software applications from initial concept to final, polished deliverable.</em></p>
+							<p><em>Innovative and deadline-driven Software Engineer with 4+ years of experience
+									developing user-centered software applications from initial concept to final,
+									polished deliverable.</em></p>
 							<p>
 							<ul>
 								<li>401/64, Abdul Aziz Road, Bhola Nath Kuwan, Lucknow 226003</li>
@@ -269,10 +275,11 @@
 
 						<h3 class="resume-title">Education</h3>
 						<div class="resume-item">
-							<h4>B.Tech In Computer Science  &amp; Engineering </h4>
+							<h4>B.Tech In Computer Science &amp; Engineering </h4>
 							<h5>2013 - 2017</h5>
 							<p><em>Lucknow Institute of Technology, Lucknow, India</em></p>
-							<p>Completed graduation in year 2017 with 76% of marks from Abdul Kalam Technical University.</p>
+							<p>Completed graduation in year 2017 with 76% of marks from Abdul Kalam Technical
+								University.</p>
 						</div>
 						<div class="resume-item">
 							<h4>Intermdiate</h4>
@@ -313,7 +320,7 @@
 								<li>Developed numerous software applications (website, API's and web pages).</li>
 								<li>Managed up to 5 projects or tasks at a given time while under pressure</li>
 								<li>Recommended and consulted with clients on the most appropriate business logic</li>
-								<li>Created 4+  presentations and proposals a month for clients and account managers</li>
+								<li>Created 4+ presentations and proposals a month for clients and account managers</li>
 							</ul>
 							</p>
 						</div>
@@ -329,7 +336,8 @@
 
 				<div class="section-title">
 					<h2>Services</h2>
-					<p>I am a web developer with all the expertise you need to build a successful, scalable and stable product.</p>
+					<p>I am a web developer with all the expertise you need to build a successful, scalable and stable
+						product.</p>
 				</div>
 
 				<div class="row">
@@ -337,7 +345,8 @@
 						<div class="icon-box">
 							<div class="icon"><i class="bx bxl-dribbble"></i></div>
 							<h4 class="title"><a href="javascript:;">Web Development</a></h4>
-							<p class="description">Helping Businesses build secure and scalable Web Applications, Portals and Solutions </p>
+							<p class="description">Helping Businesses build secure and scalable Web Applications,
+								Portals and Solutions </p>
 						</div>
 					</div>
 
@@ -345,7 +354,8 @@
 						<div class="icon-box">
 							<div class="icon"><i class="bx bx-file"></i></div>
 							<h4 class="title"><a href="javascript:;">Api Development</a></h4>
-							<p class="description">Helping Startups and Businesses around the globe develop next-gen iOS apps with cutting-edge technology.</p>
+							<p class="description">Helping Startups and Businesses around the globe develop next-gen iOS
+								apps with cutting-edge technology.</p>
 						</div>
 					</div>
 
@@ -377,7 +387,9 @@
 
 				<div class="section-title">
 					<h2>Portfolio</h2>
-					<p>BE Graduate|3 years of experience in Software Development|Sound understanding of HTML, CSS3, JSON, Database, and SQL queries|Capable of Performance Testing, Documentation, and Deployment on live site</p>
+					<p>B.Tech Graduate |3 years of experience in Software Development|Sound understanding of HTML, CSS3,
+						JSON, Database, and SQL queries|Capable of Performance Testing, Documentation, and Deployment on
+						live site</p>
 				</div>
 
 				<div class="row">
@@ -403,7 +415,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery"
 									class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-								<a href="http://gurushala.co/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://gurushala.co/" target="_blank" title="More Details"><i
+										class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -418,7 +431,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-22.png" data-gall="portfolioGallery"
 									class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-								<a href="http://smilesmith.dental/"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://smilesmith.dental/" target="_blank" title="More Details"><i
+										class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -433,7 +447,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-33.png" data-gall="portfolioGallery"
 									class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-								<a href="http://www.eghardware.sg/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="http://www.eghardware.sg/" target="_blank" title="More Details"><i
+										class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -448,7 +463,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-44.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-								<a href="https://www.thewalkinggm.com/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://www.thewalkinggm.com/" target="_blank" title="More Details"><i
+										class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -463,8 +479,9 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-55.png" data-gall="portfolioGallery"
 									class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-									<a href="https://obuhi.com" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
-								</div>
+								<a href="https://obuhi.com" target="_blank" title="More Details"><i
+										class="bx bx-link"></i></a>
+							</div>
 						</div>
 					</div>
 
@@ -478,7 +495,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-77.png" data-gall="portfolioGallery"
 									class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-								<a href="https://www.npmjs.com/package/preview-image-vue" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://www.npmjs.com/package/preview-image-vue" target="_blank"
+									title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -493,7 +511,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-66.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-								<a href="https://play.google.com/store/apps/details?id=com.getr&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.getr&hl=en_IN&gl=US"
+									target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -508,7 +527,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-88.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-								<a href="https://play.google.com/store/apps/details?id=com.gitr&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.gitr&hl=en_IN&gl=US"
+									target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -522,7 +542,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-99.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-								<a href="https://play.google.com/store/apps/details?id=singsys.com.thewalkinggm&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=singsys.com.thewalkinggm&hl=en_IN&gl=US"
+									target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -536,7 +557,8 @@
 							<div class="portfolio-links">
 								<a href="assets/img/portfolio/portfolio-00.png" data-gall="portfolioGallery"
 									class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-								<a href="https://play.google.com/store/apps/details?id=com.lookibooky&hl=en_IN&gl=US"  target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+								<a href="https://play.google.com/store/apps/details?id=com.lookibooky&hl=en_IN&gl=US"
+									target="_blank" title="More Details"><i class="bx bx-link"></i></a>
 							</div>
 						</div>
 					</div>
@@ -633,7 +655,8 @@
 
 				<div class="section-title">
 					<h2>Contact</h2>
-					<p>While we are good at sign language, there are various other simpler ways to connect with me. Talk to me in person.</p>
+					<p>While we are good at sign language, there are various other simpler ways to connect with me. Talk
+						to me in person.</p>
 				</div>
 
 				<div class="row">
@@ -641,12 +664,17 @@
 					<div class="col-lg-6 col-md-6">
 						<div class="contact-about">
 							<h3>Saher</h3>
-							<p>I’m an innovative software engineer with 3+ years of experience managing all aspects of the development process for small to medium-sized companies.</p>
+							<p>I’m an innovative software engineer with 4+ years of experience managing all aspects of
+								the development process for small to medium-sized companies.</p>
 							<div class="social-links">
-								<a href="https://twitter.com/sahersiddiqui4" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
-								<a href="https://m.facebook.com/saher.siddiqui.963" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
-								<a href="https://www.instagram.com/saher_siddiquii/"  target="_blank"  class="instagram"><i class="icofont-instagram"></i></a>
-								<a href="https://www.linkedin.com/in/saher-siddiqui-b8494b144/" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+								<a href="https://twitter.com/sahersiddiqui4" target="_blank" class="twitter"><i
+										class="icofont-twitter"></i></a>
+								<a href="https://m.facebook.com/saher.siddiqui.963" target="_blank" class="facebook"><i
+										class="icofont-facebook"></i></a>
+								<a href="https://www.instagram.com/saher_siddiquii/" target="_blank"
+									class="instagram"><i class="icofont-instagram"></i></a>
+								<a href="https://www.linkedin.com/in/saher-siddiqui-b8494b144/" target="_blank"
+									class="linkedin"><i class="icofont-linkedin"></i></a>
 							</div>
 						</div>
 					</div>
@@ -714,7 +742,7 @@
 	<footer id="footer">
 		<div class="container">
 			<div class="copyright">
-				&copy; Copyright <strong><span>Saher</span></strong>. All Rights Reserved
+				Copyright &copy; <strong><span id='date'></span></strong>. All Rights Reserved. Made By Saher
 			</div>
 		</div>
 	</footer><!-- End  Footer -->
@@ -735,6 +763,10 @@
 
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
+	<script>
+		let a = new Date;
+		document.getElementById("date").innerHTML = a.getFullYear()
+	</script>
 
 </body>
 
